# Evidence-Locker

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/v1/: ingestion.py  workflow.py
app/db/: database.py  models.py
app/schemas/: evidence.py
data/: evidence.db
docs/: database_schema.md
scripts/: demo_git_collector.py  demo_run_all.py  demo_workflow.py  seed.py
tests/: conftest.py  test_api.py  test_auth.py  test_schemas.py  test_workflow.py
